--- a/src/Footer/InfiniteScroll/InfiniteScroll.css
+++ b/src/Footer/InfiniteScroll/InfiniteScroll.css
@@ -2,7 +2,7 @@
     height: 60px;
     position: relative;
     width: 100%;
-  
+
     display: grid;
     place-items: center;
     overflow: hidden;
@@ -28,14 +28,18 @@
   /*  IMPORTANT CODE BELOW */
   
   .slide-track {
-    width: calc(300px * 20);
+    width: calc(250px * 20);
     display: flex;
     animation: scroll 20s linear infinite;
     justify-content: space-between;
+    /* animation-direction: reverse; */
+  }
+  .slide-track:hover {
+    animation-play-state: paused;
   }
   
   .slide-track2 {
-    width: calc(300px * 15);
+    width: calc(250px * 15);
     display: flex;
     animation: scroll2 15s linear infinite;
     justify-content: space-between;
@@ -47,25 +51,38 @@
   }
   
   .slide {
-    width: 300px;
+    width: 100%;
     height: 60px;
     background-color: #2866a0;
     color: white;
     display: grid;
     place-items: center;
     transition:0.5s;
-    cursor:pointer;
   }
-  .slide:hover{
+  .slide-text {
+    margin: 0px 10px;
+    position: relative;
+  }
+    
+  .slide-text span::after {
+    background: #ffe738;
+    content: "";
+    height: 100%;
+    position: absolute;
+    right: -12px;
+    top: 0;
+    width: 2px;
+  }
+  /* .slide:hover{
     transform:scale(0.8)
-  }
+  } */
   
   @keyframes scroll {
     0% {
       transform: translateX(0px);
     }
     100% {
-      transform: translateX(calc(-300px * 10));
+      transform: translateX(calc(-250px * 10));
     }
   }
   
@@ -74,11 +91,11 @@
       transform: translateX(0px);
     }
     100% {
-      transform: translateX(calc(-300px * 5));
+      transform: translateX(calc(-250px * 5));
     }
   }
   
-  @media screen and (max-width: 768px) {
+  /* @media screen and (max-width: 768px) {
     .slide-track {
       width: calc(80px * 20);
     }
@@ -108,5 +125,4 @@
         transform: translateX(calc(-80px * 5));
       }
     }
-  }
-  
+  } */
