--- a/src/Footer/InfiniteScroll/InfiniteScroll.css
+++ b/src/Footer/InfiniteScroll/InfiniteScroll.css
@@ -2,7 +2,7 @@
     height: 60px;
     position: relative;
     width: 100%;
-
+    background-color: #2866a0 !important;
     display: grid;
     place-items: center;
     overflow: hidden;
@@ -10,7 +10,6 @@
   .slider::before,
   .slider::after{
     position:absolute;
-
     content:'';
     height:100%;width:25%;
     z-index:2;pointer-events:none;
@@ -53,7 +52,6 @@
   .slide {
     width: 100%;
     height: 60px;
-    background-color: #2866a0;
     color: white;
     display: grid;
     place-items: center;
@@ -73,9 +71,7 @@
     top: 0;
     width: 2px;
   }
-  /* .slide:hover{
-    transform:scale(0.8)
-  } */
+
   
   @keyframes scroll {
     0% {
